--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ percent-encoding = "2.0"
 clap = { version = "4.0", features = ["derive"] }
 http-auth-basic = "0.3.5"
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+bytes = "1.10.1"
+mime = "0.3.17"
