--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,19 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 bytes = "1.10.1"
 mime = "0.3.17"
+hyper-tls = { version = "0.6", optional = true }
+rustls = { version = "0.22", optional = true }
+tokio-rustls = { version = "0.25", optional = true }
+rustls-pki-types = { version = "1.0", optional = true }
+subtle = { version = "2.5", features = ["nightly"] }
+
+[features]
+default = ["tls"]
+tls = ["hyper-tls", "rustls", "tokio-rustls", "rustls-pki-types"]
+
+[profile.release]
+lto = "fat"
+opt-level = 3
+panic = "abort"
+strip = true
+codegen-units = 1
