--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,6 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 bytes = "1.10.1"
 mime = "0.3.17"
-hyper-tls = { version = "0.6", optional = true }
 rustls = { version = "0.22", optional = true }
 tokio-rustls = { version = "0.25", optional = true }
 rustls-pki-types = { version = "1.0", optional = true }
@@ -24,7 +23,7 @@ subtle = { version = "2.5", features = ["nightly"] }
 
 [features]
 default = ["tls"]
-tls = ["hyper-tls", "rustls", "tokio-rustls", "rustls-pki-types"]
+tls = [ "rustls", "tokio-rustls", "rustls-pki-types" ]
 
 [profile.release]
 lto = "fat"
