--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "servive"
 version = "0.1.0"
 edition = "2024"
+authors = ["METDXT <metdxt@obj.su>"]
+description = "A stupid simple program to serve files over HTTP"
+repository = "https://github.com/metdxt/servive"
+license = "MIT"
 
 [dependencies]
 hyper = { version = "1.0", features = ["full"] }
