--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ rustls = { version = "0.22", optional = true }
 tokio-rustls = { version = "0.25", optional = true }
 rustls-pki-types = { version = "1.0", optional = true }
 subtle = { version = "2.5", features = ["nightly"] }
+local-ip-address = "0.6.5"
 
 [features]
 default = ["tls"]
