--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ repository = "https://github.com/metdxt/servive"
 license = "MIT"
 
 [dependencies]
+thiserror = "1.0"
+anyhow = "1.0"
 hyper = { version = "1.0", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 http-body-util = "0.1"
