--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "servive"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2024"
 authors = ["METDXT <metdxt@obj.su>"]
 description = "A stupid simple program to serve files over HTTP"
 repository = "https://github.com/metdxt/servive"
 license = "MIT"
+readme = "README.md"
 
 [dependencies]
 thiserror = "1.0"
