--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tokio-rustls = { version = "0.25", optional = true }
 rustls-pki-types = { version = "1.0", optional = true }
 subtle = { version = "2.5", features = ["nightly"] }
 local-ip-address = "0.6.5"
+regex = "1.10"
 
 [features]
 default = ["tls"]
